test/parser/cases/invalid/small/statement_recovery_unclosed_paren.cp
main()
{
    let before = 1;
    let broken = call(;
    let after = 2;
}
